feat: implemeting asigniation of tickets to agents by id
