# routes/api.php
@@ -1,5 +1,6 @@
 <?php
 
+use OpenApi\Generator;
 use App\Http\Controllers\TicketController;
 use Illuminate\Http\Request;
 use Illuminate\Support\Facades\Route;
@@ -17,4 +18,5 @@ Route::middleware('auth:sanctum')->group(function () {
     });
     Route::apiResource('response',ResponseController::class);
     Route::apiResource('tickets', TicketController::class);
+    Route::post('tickets/{ticket}/assign/{agent}', [TicketController::class, 'assign']);
 });
